School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/lexer/test_syntax_error.deca
// Fichier source avec des erreurs syntaxiques
{
    invalid_identifier@ = 10; // Error: invalid character in identifier
    missing_operand = * 5;    // Error: missing operand
}